[gd_scene load_steps=4 format=3 uid="uid://bi2d1e14l124x"]

[ext_resource type="Script" uid="uid://3ksico1jl4qb" path="res://Scripts/UI/inventory_ui_slot.gd" id="1_uah3n"]
[ext_resource type="Texture2D" uid="uid://d0tbe64g80a2m" path="res://Assets/UI/inventory-slot.png" id="2_k6ogx"]
[ext_resource type="Theme" uid="uid://d3l5kwxe8w48i" path="res://Themes/inventory_theme.tres" id="3_k6ogx"]

[node name="Inventory_UI_Slot" type="Panel"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(16, 16)
offset_left = -1.0
offset_top = -1.0
offset_right = 18.0
offset_bottom = 17.0
script = ExtResource("1_uah3n")

[node name="background" type="Sprite2D" parent="."]
position = Vector2(1, 1)
texture = ExtResource("2_k6ogx")
centered = false

[node name="CenterContainer" type="CenterContainer" parent="."]
custom_minimum_size = Vector2(16, 16)
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 17.0
offset_bottom = 17.0

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 2

[node name="drop_down_trigger" type="Button" parent="CenterContainer/Panel"]
layout_mode = 0
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0

[node name="item_display" type="Sprite2D" parent="CenterContainer/Panel"]
scale = Vector2(0.85, 0.85)

[node name="stack_count" type="Label" parent="CenterContainer/Panel"]
visible = false
custom_minimum_size = Vector2(20, 15)
layout_mode = 0
offset_left = -1.0
offset_top = 2.0
offset_right = 19.0
offset_bottom = 17.0
scale = Vector2(0.4, 0.4)
theme = ExtResource("3_k6ogx")
text = "1"
horizontal_alignment = 2

[node name="drop_down_menu" type="VBoxContainer" parent="."]
visible = false
z_index = 1
layout_mode = 2
offset_left = 17.0
offset_top = 1.0
offset_right = 113.0
offset_bottom = 97.0
theme = ExtResource("3_k6ogx")

[node name="item_name" type="Label" parent="drop_down_menu"]
layout_mode = 2
theme = ExtResource("3_k6ogx")
text = "(empty)"

[node name="use_button" type="Button" parent="drop_down_menu"]
layout_mode = 2
theme = ExtResource("3_k6ogx")
text = "use"

[node name="info_button" type="Button" parent="drop_down_menu"]
layout_mode = 2
theme = ExtResource("3_k6ogx")
text = "show in grimoire"

[node name="drop_button" type="Button" parent="drop_down_menu"]
layout_mode = 2
theme = ExtResource("3_k6ogx")
text = "drop"

[node name="amount_edit" type="LineEdit" parent="drop_down_menu/drop_button"]
visible = false
layout_mode = 0
offset_left = 163.0
offset_top = 1.0
offset_right = 236.125
offset_bottom = 24.0
theme = ExtResource("3_k6ogx")
placeholder_text = "amount"
max_length = 2
context_menu_enabled = false
emoji_menu_enabled = false
virtual_keyboard_type = 2
select_all_on_focus = true

[node name="trash_button" type="Button" parent="drop_down_menu"]
layout_mode = 2
theme = ExtResource("3_k6ogx")
text = "trash"

[node name="amount_edit" type="LineEdit" parent="drop_down_menu/trash_button"]
visible = false
layout_mode = 0
offset_left = 163.0
offset_right = 236.125
offset_bottom = 23.0
placeholder_text = "amount"

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="CenterContainer/Panel/drop_down_trigger" to="." method="_on_drop_down_trigger_pressed"]
[connection signal="pressed" from="drop_down_menu/drop_button" to="." method="_on_drop_button_pressed"]
[connection signal="text_changed" from="drop_down_menu/drop_button/amount_edit" to="." method="_on_drop_amount_edit_text_changed"]
[connection signal="pressed" from="drop_down_menu/trash_button" to="." method="_on_trash_button_pressed"]
[connection signal="text_changed" from="drop_down_menu/trash_button/amount_edit" to="." method="_on_trash_amount_edit_text_changed"]
